# docs/swagger.json
@@ -546,41 +546,41 @@
         "dto.Chat": {
             "type": "object",
             "required": [
-                "employees",
-                "id"
+                "id",
+                "participants"
             ],
             "properties": {
-                "employees": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.Employee"
-                    }
-                },
                 "id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                },
+                "participants": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.Participant"
+                    }
                 }
             }
         },
         "dto.ChatCreate": {
             "type": "object",
             "required": [
-                "employee_ids"
+                "participant_ids"
             ],
             "properties": {
-                "employee_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
                 "is_group": {
                     "type": "boolean"
                 },
                 "name": {
                     "type": "string"
+                },
+                "participant_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -594,7 +594,7 @@
                 "employees": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.Employee"
+                        "$ref": "#/definitions/dto.Participant"
                     }
                 },
                 "id": {
@@ -611,38 +611,17 @@
         "dto.ChatUpdate": {
             "type": "object",
             "required": [
-                "employee_ids"
+                "participant_ids"
             ],
             "properties": {
-                "employee_ids": {
+                "name": {
+                    "type": "string"
+                },
+                "participant_ids": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.Employee": {
-            "type": "object",
-            "required": [
-                "name",
-                "surname"
-            ],
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "patronymic": {
-                    "type": "string"
-                },
-                "surname": {
-                    "type": "string"
                 }
             }
         },
@@ -668,26 +647,26 @@
             "type": "object",
             "required": [
                 "chat_id",
-                "colleague_id",
                 "created_at",
-                "employee_id",
                 "id",
+                "receiver_id",
+                "sender_id",
                 "text"
             ],
             "properties": {
                 "chat_id": {
                     "type": "string"
                 },
-                "colleague_id": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
-                "employee_id": {
+                "id": {
                     "type": "string"
                 },
-                "id": {
+                "receiver_id": {
+                    "type": "string"
+                },
+                "sender_id": {
                     "type": "string"
                 },
                 "text": {
@@ -699,18 +678,18 @@
             "type": "object",
             "required": [
                 "chat_id",
-                "colleague_id",
-                "employee_id",
+                "receiver_id",
+                "sender_id",
                 "text"
             ],
             "properties": {
                 "chat_id": {
                     "type": "string"
                 },
-                "colleague_id": {
+                "receiver_id": {
                     "type": "string"
                 },
-                "employee_id": {
+                "sender_id": {
                     "type": "string"
                 },
                 "text": {
@@ -725,6 +704,27 @@
             ],
             "properties": {
                 "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.Participant": {
+            "type": "object",
+            "required": [
+                "name",
+                "surname"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "patronymic": {
+                    "type": "string"
+                },
+                "surname": {
                     "type": "string"
                 }
             }
