# internal/models/dto/chat.go
@@ -3,7 +3,7 @@ package dto
 import "github.com/google/uuid"
 
 type Chat struct {
-	Id        uuid.UUID  `json:"id" binding:"required"`
-	Name      string     `json:"name"`
-	Employees []Employee `json:"employees" binding:"required"`
+	Id           uuid.UUID     `json:"id" binding:"required"`
+	Name         string        `json:"name"`
+	Participants []Participant `json:"participants" binding:"required"`
 }
