# internal/models/dto/chat_create.go
@@ -3,7 +3,7 @@ package dto
 import "github.com/google/uuid"
 
 type ChatCreate struct {
-	Name        string      `json:"name"`
-	IsGroup     bool        `json:"is_group"`
-	EmployeeIds []uuid.UUID `json:"employee_ids" binding:"required"`
+	Name           string      `json:"name"`
+	IsGroup        bool        `json:"is_group"`
+	ParticipantIds []uuid.UUID `json:"participant_ids" binding:"required"`
 }
