# internal/models/dto/chat_update.go
@@ -3,6 +3,6 @@ package dto
 import "github.com/google/uuid"
 
 type ChatUpdate struct {
-	Name        string      `json:"name"`
-	EmployeeIds []uuid.UUID `json:"employee_ids" binding:"required"`
+	Name           string      `json:"name"`
+	ParticipantIds []uuid.UUID `json:"participant_ids" binding:"required"`
 }
